--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
 	<meta charset="UTF-8">
 
-	<title>Starter Node and Angular</title>
+	<title>MEAN</title>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/style.css">
@@ -17,10 +17,10 @@
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
-	<script src="js/controllers/NerdCtrl.js"></script>
-	<script src="js/services/NerdService.js"></script>
-	<script src="js/controllers/GeekCtrl.js"></script>
-	<script src="js/services/GeekService.js"></script>
+	<script src="js/controllers/settingsCtrl.js"></script>
+	<script src="js/services/settingsService.js"></script>
+	<script src="js/controllers/profileCtrl.js"></script>
+	<script src="js/services/profileService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
 </head>
